--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
       <div class="dealer-container">
         <h2>Dealer Hand</h2>
         <div class="hand">
-          <div class="card" id="houseFirstHand"></div>
-          <div class="card" id="houseSecondHand"></div>
+          <div class="card" id="dealersFirstHand"></div>
+          <div class="card" id="dealersSecondHand"></div>
         </div>
       </div>
       <div class="player-container">
         <h2>Player Hand</h2>
         <div class="hand">
           <div class="card" id="playersFirstHand"></div>
-          <div class="card" id="playerseSecondHand"></div>
+          <div class="card" id="playersSecondHand"></div>
         </div>
         <div class="button-container hidden">
-          <button class="button userBtns hidden">Stand</button>
-          <button class="button userBtns hidden">Hit</button>
-          <button class="button userBtns hidden">Double</button>
-          <button class="button userBtns hidden">Split</button>
+          <button class="button userBtns hidden" id="stand" onclick="stand()">Stand</button>
+          <button class="button userBtns hidden" id="hit">Hit</button>
+          <button class="button userBtns hidden disabled" id="double">Double</button>
+          <button class="button userBtns hidden disabled" id="split">Split</button>
           <button class="button dealHandBtn" onclick="dealCards()">Deal Cards</button>
         </div>
       </div>
