added a comparing logic for the users hand

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <div class="card" id="playersFirstHand"></div>
           <div class="card" id="playersSecondHand"></div>
         </div>
+        <div id="totalCount"></div>
         <div class="button-container hidden">
           <button class="button userBtns hidden" id="stand" onclick="stand()">Stand</button>
           <button class="button userBtns hidden" id="hit">Hit</button>
