--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="container">
       <div class="dealer-container">
         <h2>Dealer Hand</h2>
-        <div class="hand">
+        <div class="dealerHand">
           <div class="card" id="dealersFirstHand"></div>
           <div class="card" id="dealersSecondHand"></div>
         </div>
       </div>
       <div class="player-container">
         <h2>Player Hand</h2>
-        <div class="hand">
+        <div class="playerHand">
           <div class="card" id="playersFirstHand"></div>
           <div class="card" id="playersSecondHand"></div>
         </div>
