--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <div class="card" id="dealersFirstHand"></div>
           <div class="card" id="dealersSecondHand"></div>
         </div>
+        <p id="dealerHand"></p>
       </div>
       <div class="player-container">
         <h2>Player Hand</h2>
