added sound effects and alerts for bust/blackjack

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
   <body>
     <div class="container">
+      <audio id="soundEffect">
+        <source src="./develop/assets/flipcard-91468.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+
+      <audio id="bustSoundEffect">
+        <source src="./develop/assets/negative_beeps-6008.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+      
       <div class="dealer-container">
         <h2>Dealer Hand</h2>
         <div class="dealerHand">
