--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 
       <audio id="bustSoundEffect">
         <source src="./develop/assets/negative_beeps-6008.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
+      </audio>
+
+      <audio id="playerWonSoundEffect1">
+        <source src="./develop/assets/cute-level-up-3-189853.mp3" type="audio/mpeg">
+      </audio>
+
+      <audio id="playerWonSoundEffect2">
+        <source src="./develop/assets/player-wins-94889.mp3" type="audio/mpeg">
+      </audio>
+
+      <audio id="blackjack">
+        <source src="./develop/assets/black-jack.mp3" type="audio/mpeg">
       </audio>
       
       <div class="dealer-container">
