fixing minor bug issues and redoing some of the logic

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <audio id="blackjack">
         <source src="./develop/assets/black-jack.mp3" type="audio/mpeg">
       </audio>
+
+      <audio id="push">
+        <source src="./develop/assets/push.mp3" type="audio/mpeg">
+      </audio>
       
       <div class="dealer-container">
         <h2>Dealer Hand</h2>
@@ -36,7 +40,7 @@
           <div class="card" id="dealersFirstHand"></div>
           <div class="card" id="dealersSecondHand"></div>
         </div>
-        <p id="dealerHand"></p>
+        <p id="dealerHandCount"></p>
       </div>
       <div class="player-container">
         <h2>Player Hand</h2>
