styled alerts and made them dynamic

--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
           <button class="button dealHandBtn" onclick="dealCards()">Deal Cards</button>
         </div>
       </div>
+      <div id="customAlert" class="hidden">
+        <div class="alertContent">
+          <div id="closeButton">X</div>
+          <p class="alertMessage" id="lostMessage"></p>
+        </div>
+      </div>
+      <div id="customWonAlert" class="hidden">
+        <div class="alertContent">
+          <div id="closeWonButton">X</div>
+          <div class="alertMessage" id="wonMessage"></div>
+        </div>
+      </div>
     </div>
     <script src="./develop/scipt.js"></script>
   </body>
