--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blackjack Game</title>
     <link rel="stylesheet" href="./develop/styles.css" />
-    <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
-    />
   </head>
 
   <body>
@@ -86,7 +81,7 @@
           </button>
         </div>
         <p id="userBankRoll">Bank Roll:</p>
-        <div>
+        <div id="bettingContainer">
           <p id="userBetAmountContainer">Total Bet:</p>
           <button class="button" id="increaseBetBtn" onclick="increaseBet()"><i class="fa-solid fa-arrow-up"></i></button>
           <button class="button" id="decreaseBetBtn" onclick="decreaseBet()"><i class="fa-solid fa-arrow-down"></i></button>
