started double logic

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <button class="button userBtns hidden" id="stand" onclick="stand()">
             Stand
           </button>
-          <button class="button userBtns hidden" id="hit">Hit</button>
-          <button class="button userBtns hidden disabled" id="double">
+          <button class="button userBtns hidden" id="hit" onclick="hit()">Hit</button>
+          <button class="button userBtns hidden" onclick="double()" id="double">
             Double
           </button>
           <button class="button userBtns hidden disabled" id="split">
